# ColourSwatch

./: CHANGELOG.md  DOCS.md  README.md  notes.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: README.md
DOCS/colourswatch/: GimpGplPalette.md  colourswatch.md  index.md  io.md
colourswatch/: GimpGplPalette.py  __init__.py  colourswatch.py  gimpgplpal.py  io.py
documentation/reference/: MODULES.md  README.md
documentation/reference/colourswatch/: GimpGplPalette.md  colourswatch.md  gimpgplpal.md  index.md  io.md
test/: 40.colors  base24(toml).gpl  base24(toml).toml  base24.json  colours(jpg).gpl  colours(png).gpl  coreldraw(pal).skp  example(hpl).gpl  example(hpl).hpl  example(hpl).skp  example(skp).gpl  example(skp).skp  mini(spl).gpl  paintshoppro.pal  scribus(xml).skp  scribus.xml  scribus_desired.xml  series(soc).gpl  series(soc).skp  test.py
test/data/: ai(svg).gpl  base24(json).json  base24(yaml).yaml  colours(acbl).txt  colours(png).gpl  colours.acbl  coreldraw(pal).gpl  defaultpdn.txt  example(hpl).gpl  example.skp  paintshoppro(pal).gpl  paintshoppro(pal).skp  paintshoppro.pal  scribus(xml).gpl  series(soc).skp  series(soc).soc  solarized(ase).gpl
tests/: test_gimpgplpal.py  test_io.py  test_main.py
tests/data/: 40(colors).gpl  base24(toml).toml  colours(acbl).gpl  colours(webp).gpl  defaultpdn(txt).gpl  defaultpdn(txt).skp  mini.spl  plasma_gpl_str_expected.txt  scribus(xml).xml
